Add 7 new articles: Van Systems (4), Decision Guide T5vsT6, Kit & Gear (2)

--- a/decision-guide/index.html
+++ b/decision-guide/index.html
@@ -112,6 +112,15 @@
         <p class="spoke-card__desc">Everything from scratch — types, how to choose, where to start.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
+    </a>
+    <a href="/decision-guide/vw-t5-vs-t6/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/01-vw-exterior/vw-transporter-vitali-adutskevich-06--card.jpg" alt="VW T5 vs T6 — Which to Buy?" loading="lazy"></div>
+      <div class="spoke-card__body">
+        <p class="spoke-card__tag">Decision Guide</p>
+        <h3 class="spoke-card__title">VW T5 vs T6 — Which to Buy?</h3>
+        <p class="spoke-card__desc">The price gap, the AdBlue question, and what to choose on your budget.</p>
+        <span class="spoke-card__link">Read more &rarr;</span>
+      </div>
     </a></div>
   </div>
 </section>
