--- a/kit-and-gear/index.html
+++ b/kit-and-gear/index.html
@@ -76,21 +76,21 @@
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a>
-    <a href="/kit-and-gear/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/outdoor-cooking-austin-03--card.jpg" alt="Guide coming soon — Best Camping Espresso Makers" loading="lazy"></div>
+    <a href="/kit-and-gear/best-espresso-maker-van-life/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/outdoor-cooking-austin-03--card.jpg" alt="Best Camping Espresso Makers for Van Life" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Kit & Gear</p>
-        <h3 class="spoke-card__title">Guide coming soon — Best Camping Espresso Makers</h3>
-        <p class="spoke-card__desc">Tested. The ones that actually work off-grid.</p>
+        <h3 class="spoke-card__title">Best Camping Espresso Makers for Van Life</h3>
+        <p class="spoke-card__desc">Aeropress, moka pot, Nanopresso — what actually works off-grid.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a>
-    <a href="/kit-and-gear/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/awning-ali-kazal-09--card.jpg" alt="Guide coming soon — Portable Showers" loading="lazy"></div>
+    <a href="/kit-and-gear/portable-shower-van-life/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/awning-ali-kazal-09--card.jpg" alt="Portable Showers for Van Life" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Kit & Gear</p>
-        <h3 class="spoke-card__title">Guide coming soon — Portable Showers</h3>
-        <p class="spoke-card__desc">The problem-solution guide to staying clean off-hookup.</p>
+        <h3 class="spoke-card__title">Portable Showers for Van Life</h3>
+        <p class="spoke-card__desc">Staying clean without a fixed shower. The honest guide.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a></div>
