--- a/van-systems/index.html
+++ b/van-systems/index.html
@@ -67,39 +67,39 @@
 <hr />
     </div>
     <div class="spoke-grid">
-    <a href="/van-systems/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/02-modern-exterior/campervan-mountain-casper-westera-08--card.jpg" alt="Guide coming soon — Roofs & Pop-Tops" loading="lazy"></div>
+    <a href="/van-systems/roof-options/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/02-modern-exterior/campervan-mountain-casper-westera-08--card.jpg" alt="Roof Options — Pop-Top, High-Roof or Standard?" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Van Systems</p>
-        <h3 class="spoke-card__title">Guide coming soon — Roofs & Pop-Tops</h3>
-        <p class="spoke-card__desc">Everything about roof options — fixed high, pop-top, standard.</p>
+        <h3 class="spoke-card__title">Roof Options — Pop-Top, High-Roof or Standard?</h3>
+        <p class="spoke-card__desc">One of the most consequential decisions in a conversion. Here's how to choose.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a>
-    <a href="/van-systems/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-balkan-campers-01--card.jpg" alt="Guide coming soon — Sleeping Layouts" loading="lazy"></div>
+    <a href="/van-systems/sleeping-configurations/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-balkan-campers-01--card.jpg" alt="Sleeping Layouts — Rock and Roll vs Fixed Bed" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Van Systems</p>
-        <h3 class="spoke-card__title">Guide coming soon — Sleeping Layouts</h3>
-        <p class="spoke-card__desc">Rock and roll vs fixed bed. What works for your use case.</p>
+        <h3 class="spoke-card__title">Sleeping Layouts — Rock and Roll vs Fixed Bed</h3>
+        <p class="spoke-card__desc">Your sleeping setup shapes everything else. Here's what to think about.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a>
-    <a href="/van-systems/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-kitchen-michal-balog-01--card.jpg" alt="Guide coming soon — Electrical Systems" loading="lazy"></div>
+    <a href="/van-systems/electrical-system/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/04-interiors/interior-kitchen-michal-balog-01--card.jpg" alt="Electrical System Guide — Batteries, Solar & 12V" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Van Systems</p>
-        <h3 class="spoke-card__title">Guide coming soon — Electrical Systems</h3>
-        <p class="spoke-card__desc">Batteries, solar, DC-DC chargers — what you need and why.</p>
+        <h3 class="spoke-card__title">Electrical System Guide — Batteries, Solar & 12V</h3>
+        <p class="spoke-card__desc">How a 12V campervan system fits together, explained without the jargon.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a>
-    <a href="/van-systems/" class="spoke-card">
-      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/awning-radomir-moysia-01--card.jpg" alt="Guide coming soon — Night Heaters" loading="lazy"></div>
+    <a href="/van-systems/night-heaters/" class="spoke-card">
+      <div class="spoke-card__img-wrap"><img class="spoke-card__img" src="/assets/images/09-practical/awning-radomir-moysia-01--card.jpg" alt="Diesel Heaters — Webasto, Eberspächer & the Budget Options" loading="lazy"></div>
       <div class="spoke-card__body">
         <p class="spoke-card__tag">Van Systems</p>
-        <h3 class="spoke-card__title">Guide coming soon — Night Heaters</h3>
-        <p class="spoke-card__desc">Diesel heaters compared — Webasto, Eberspacher and the budget options.</p>
+        <h3 class="spoke-card__title">Diesel Heaters — Webasto, Eberspächer & the Budget Options</h3>
+        <p class="spoke-card__desc">What they cost, how they work, and what to actually buy.</p>
         <span class="spoke-card__link">Read more &rarr;</span>
       </div>
     </a></div>
