fix: affiliate copy cleanup, trust row rewrite, logo size, funding page rename

--- a/about/index.html
+++ b/about/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About CamperDNA — Independent Campervan Advice, No Agenda</title>
-  <meta name="description" content="CamperDNA is built by a campervan owner, not a seller. Independent advice, honest recommendations, no brand deals. Here's who we are and why we built this.">
+  <title>About CamperDNA — Honest, Independent Campervan Advice</title>
+  <meta name="description" content="CamperDNA is built by a campervan owner, not a seller. Honest advice, clear recommendations, editorially independent. Here's who we are and why we built this.">
   <link rel="canonical" href="https://camper-dna.com/about/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="About CamperDNA — Independent Campervan Advice, No Agenda">
-  <meta property="og:description" content="CamperDNA is built by a campervan owner, not a seller. Independent advice, honest recommendations, no brand deals. Here's who we are and why we built this.">
+  <meta property="og:title" content="About CamperDNA — Honest, Independent Campervan Advice">
+  <meta property="og:description" content="CamperDNA is built by a campervan owner, not a seller. Honest advice, clear recommendations, editorially independent. Here's who we are and why we built this.">
   <meta property="og:url" content="https://camper-dna.com/about/">
   <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -51,7 +51,7 @@
   <div class="hero__overlay"></div>
   <div class="hero__content">
     <h1 class="hero__title">About CamperDNA</h1>
-    <p class="hero__sub">CamperDNA is built by a campervan owner, not a seller. Independent advice, honest recommendations, no brand deals. Here's who we are and why we built this.</p>
+    <p class="hero__sub">CamperDNA is built by a campervan owner, not a seller. Honest advice, clear recommendations, editorially independent. Here's who we are and why we built this.</p>
   </div>
 </section>
 
@@ -67,10 +67,10 @@
 <p>The result is that most people buying their first campervan either spend too much on things they don't need, or spend too little on things that matter, or end up with a van that doesn't actually fit the life they were planning to live in it.</p>
 <p>CamperDNA tries to fix that. Not by telling you what to think — but by starting with the right questions.</p>
 <hr />
-<h2>How we make money</h2>
-<p>We use affiliate links in our guides. When you click a link and buy something, we earn a small commission at no cost to you. Affiliate links are always clearly labelled.</p>
-<p>That's it. We don't accept payment for editorial coverage, we don't run sponsored posts, and we don't recommend things we wouldn't use ourselves.</p>
-<p><a href="/how-we-make-money">Read our full transparency statement →</a></p>
+<h2>How the site is funded</h2>
+<p>The tool is free to use. The site stays running through product recommendations in our kit guides — clearly labelled links to retailers, where we earn a small commission if you buy. The price is identical whether you use our link or go direct.</p>
+<p>We don't run ads, and we don't take payment for editorial coverage. Product picks are based on honest assessment, not commercial arrangements.</p>
+<p><a href="/how-we-make-money">How the site is funded →</a></p>
 <hr />
 <h2>What we know and what we don't</h2>
 <p>We understand VW Transporters well. We've built a conversion, we've lived with it in all seasons, and we've made plenty of the mistakes this site tries to help you avoid.</p>
@@ -136,7 +136,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
