--- a/buying-a-van/insurance/index.html
+++ b/buying-a-van/insurance/index.html
@@ -37,7 +37,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -119,6 +119,7 @@
 </div>
 
 
+
 <section class="section section--grey">
   <div class="container">
     <div class="cta-block">
@@ -192,7 +193,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
