--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How CamperDNA Works — Your Free Campervan Profile Tool</title>
-  <meta name="description" content="CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, independent, no agenda. Here's how it works.">
+  <meta name="description" content="CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, honest, independent. Here's how it works.">
   <link rel="canonical" href="https://camper-dna.com/how-it-works/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="How CamperDNA Works — Your Free Campervan Profile Tool">
-  <meta property="og:description" content="CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, independent, no agenda. Here's how it works.">
+  <meta property="og:description" content="CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, honest, independent. Here's how it works.">
   <meta property="og:url" content="https://camper-dna.com/how-it-works/">
   <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -51,7 +51,7 @@
   <div class="hero__overlay"></div>
   <div class="hero__content">
     <h1 class="hero__title">How It Works</h1>
-    <p class="hero__sub">CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, independent, no agenda. Here's how it works.</p>
+    <p class="hero__sub">CamperDNA asks you the right questions, then builds you a personalised campervan spec. Free, honest, independent. Here's how it works.</p>
   </div>
 </section>
 
@@ -101,9 +101,9 @@
 <p>The on-screen summary gives you the headline spec. Your full report — which goes into much more detail on each system, explains the reasoning behind each recommendation and flags the common mistakes for your profile — is delivered by email.</p>
 <hr />
 <h2>What CamperDNA isn't</h2>
-<p>It isn't a van dealership. It isn't a conversion company. It isn't an affiliate machine dressed up as a tool.</p>
-<p>The recommendations are based on the answers you give, not on what anyone is paying to be recommended. Where we do use affiliate links — clearly labelled in our guides — they help us cover the cost of running the site without charging you anything.</p>
-<p><a href="/how-we-make-money">How we make money →</a></p>
+<p>It isn't a van dealership. It isn't a conversion company. The tool itself has no commercial logic in it — no recommendation is influenced by what anyone is paying.</p>
+<p>Where we use affiliate links — clearly labelled in our guides — they help cover the cost of running the site. The tool and the guides are kept separate for exactly that reason.</p>
+<p><a href="/how-we-make-money">How the site is funded →</a></p>
 <hr />
 <h2>Ready to start?</h2>
 <p><a href="/your-camperdna">Get Your CamperDNA Profile →</a></p>
@@ -160,7 +160,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
