--- a/how-we-make-money/index.html
+++ b/how-we-make-money/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>How CamperDNA Makes Money — Our Affiliate Disclosure</title>
-  <meta name="description" content="CamperDNA uses affiliate links to cover its costs. Here's exactly how that works, what it means for you, and why it doesn't affect our recommendations.">
+  <title>How CamperDNA is Funded — Our Editorial Independence</title>
+  <meta name="description" content="CamperDNA is free to use and editorially independent. Product recommendations in our guides help fund the site. Here's how that works.">
   <link rel="canonical" href="https://camper-dna.com/how-we-make-money/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="How CamperDNA Makes Money — Our Affiliate Disclosure">
-  <meta property="og:description" content="CamperDNA uses affiliate links to cover its costs. Here's exactly how that works, what it means for you, and why it doesn't affect our recommendations.">
+  <meta property="og:title" content="How CamperDNA is Funded — Our Editorial Independence">
+  <meta property="og:description" content="CamperDNA is free to use and editorially independent. Product recommendations in our guides help fund the site. Here's how that works.">
   <meta property="og:url" content="https://camper-dna.com/how-we-make-money/">
   <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -50,51 +50,41 @@
   <img class="hero__img" src="/assets/images/04-interiors/interior-conversion-corey-willett-01--hero--overlay.jpg" alt="" loading="eager" fetchpriority="high">
   <div class="hero__overlay"></div>
   <div class="hero__content">
-    <h1 class="hero__title">How We Make Money</h1>
-    <p class="hero__sub">CamperDNA uses affiliate links to cover its costs. Here's exactly how that works, what it means for you, and why it doesn't affect our recommendations.</p>
+    <h1 class="hero__title">How the Site is Funded</h1>
+    <p class="hero__sub">CamperDNA is free to use and editorially independent. Product recommendations in our guides help fund the site. Here's how that works.</p>
   </div>
 </section>
 
 <div class="article-wrap">
   <div class="article-body">
     <h2>The short version</h2>
-<p>CamperDNA earns money through affiliate links. When you click a labelled link on this site and make a purchase, we receive a small commission. This costs you nothing extra.</p>
-<p>We don't charge for the tool. We don't run ads. We don't accept payment for editorial coverage. Affiliate commissions are the only way this site makes money.</p>
+<p>CamperDNA is free to use. The profiling tool, the guides, the advice — all of it, no charge, no sign-up required.</p>
+<p>The site is funded by product recommendations in our kit guides. When you click a clearly labelled link and make a purchase, the retailer pays us a small commission. The price you pay is exactly the same either way — the commission comes out of the retailer's marketing budget, not your pocket.</p>
 <hr />
-<h2>What affiliate links are</h2>
-<p>An affiliate link is a tracked URL. When you click one and buy something within a set window (usually 24 hours for Amazon, longer for others), the retailer pays us a small percentage of the sale — typically 3–8% depending on the category and retailer.</p>
-<p>The price you pay is identical whether you click our link or go directly to the retailer. The commission comes out of the retailer's marketing budget, not your pocket.</p>
+<h2>How the product recommendations work</h2>
+<p>Our kit guides recommend things we know well — gear we've used, seen on the road, or researched thoroughly. When there's a good place to buy something, we link to it. Those links are labelled clearly, and they help keep the site running.</p>
+<p>We only recommend things we'd put in front of a friend asking for advice. We don't write about products because they have an affiliate programme. We don't change a recommendation because one retailer pays a higher commission than another. The recommendation comes first; the link follows.</p>
 <hr />
-<h2>How we label them</h2>
-<p>Affiliate links on CamperDNA are clearly marked. You'll see one of these labels:</p>
+<h2>The tool stays separate</h2>
+<p>The CamperDNA profiling tool has no commercial logic in it. The spec it generates is based entirely on your answers — not on what any retailer, conversion company, or brand would prefer you to buy. We can't influence that output commercially, and we wouldn't want to.</p>
+<p>The guides are where product links appear. The tool is where honest profiling happens. Those two things stay separate.</p>
+<hr />
+<h2>Which retailers we work with</h2>
 <ul>
-<li><strong>[Affiliate link]</strong> — inline in text</li>
-<li>A note at the top or bottom of a guide that contains multiple affiliate links</li>
+<li><strong>Amazon Associates</strong> — kit, gear, accessories and smaller items</li>
+<li><strong>Specialist outdoor and campervan retailers</strong> — where the product is better found elsewhere</li>
+<li><strong>Insurance and breakdown services</strong> — in the buying guides</li>
 </ul>
-<p>We don't hide affiliate links in neutral-looking text or label them in ways designed to obscure what they are. If a link earns us money, you'll know.</p>
+<p>We'll update this list as the site grows, and any new partnerships will be disclosed clearly.</p>
 <hr />
-<h2>Does this affect our recommendations?</h2>
-<p>No. And here's why that's not just something we say.</p>
-<p>The CamperDNA tool doesn't have affiliate links in it. The profile it generates is based entirely on your answers — there's no commercial logic influencing what spec you're recommended. We can't make more money by pointing you towards a more expensive van or a particular conversion company, because the tool isn't monetised that way.</p>
-<p>The guides are where affiliate links appear. And our approach there is straightforward: we write about things we know well and would use ourselves, and we link to places to buy them. We don't write about things because they have an affiliate programme. We don't change our recommendation because the affiliate rate is better on one product than another.</p>
-<p>If we wouldn't put the link in front of a friend asking for advice, it doesn't go on the site.</p>
-<hr />
-<h2>Which affiliate programmes we use</h2>
-<ul>
-<li><strong>Amazon Associates</strong> — for kit, gear, accessories and smaller items</li>
-<li><strong>Specialist campervan and outdoor retailers</strong> — where the product is better sourced elsewhere</li>
-<li><strong>Insurance and breakdown comparison services</strong> — for the Buying a Van guides</li>
-</ul>
-<p>We'll add to this list as the site grows, and we'll always disclose new partnerships clearly.</p>
-<hr />
-<h2>Why we're telling you all this</h2>
-<p>Because trust is the only thing an independent site has. The moment our editorial decisions start being shaped by commercial ones, the site stops being useful — and you'd be better off on a forum.</p>
-<p>We'd rather be transparent about how this works and have you trust what you read than obscure it and have you wonder.</p>
+<h2>A note on conversion companies</h2>
+<p>CamperDNA has no commercial relationship with any conversion company, and no conversion is promoted over another. But we're genuinely supportive of the conversion industry — the whole point of the tool is to help people understand what they want, which makes them better, more confident clients for whoever builds their van.</p>
+<p>If you run a conversion company and want to chat about how CamperDNA fits into your customer journey, <a href="/contact/">get in touch</a>.</p>
 <hr />
 <h2>Questions</h2>
-<p>If you ever see something on this site that looks like it might be commercially influenced and isn't clearly labelled, please tell us.</p>
+<p>If you spot something that looks commercially influenced and isn't clearly labelled, please tell us.</p>
 <p><a href="mailto:hello@camperdna.com">hello@camperdna.com</a></p>
-<p>This page also serves as our formal affiliate disclosure in compliance with ASA/CAP guidelines and Amazon Associates Programme requirements.</p>
+<p>This page serves as our formal affiliate disclosure in compliance with ASA/CAP guidelines and Amazon Associates Programme requirements.</p>
   </div>
 </div>
 
@@ -147,7 +137,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
