--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CamperDNA — Free Campervan Profile Tool UK</title>
-  <meta name="description" content="Find the right campervan spec for you. CamperDNA asks the right questions and builds your personalised campervan profile. Free, independent, no sales agenda.">
+  <meta name="description" content="Find the right campervan spec for you. CamperDNA asks the right questions and builds your personalised campervan profile. Free, honest, independent.">
   <link rel="canonical" href="https://camper-dna.com/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="CamperDNA — Free Campervan Profile Tool UK">
-  <meta property="og:description" content="Find the right campervan spec for you. CamperDNA asks the right questions and builds your personalised campervan profile. Free, independent, no sales agenda.">
+  <meta property="og:description" content="Find the right campervan spec for you. CamperDNA asks the right questions and builds your personalised campervan profile. Free, honest, independent.">
   <meta property="og:url" content="https://camper-dna.com/">
   <meta property="og:image" content="https://camper-dna.com/assets/images/og-default.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -71,11 +71,11 @@
   <div class="trust-row__inner">
     <span class="trust-item">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
-      No conversion company ties
+      For DIY builds and full conversions
     </span>
     <span class="trust-item">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
-      No brand deals or paid coverage
+      Funded by honest product picks
     </span>
     <span class="trust-item">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M20 7H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>
@@ -94,7 +94,7 @@
     <div class="founder-split">
       <div class="founder-split__content">
         <p class="founder-split__eyebrow">Why this exists</p>
-        <p class="founder-split__quote">I spent six months trying to work out which campervan was right for me. The internet was full of conversion company blogs and gear roundups with affiliate links. Nobody was asking the right questions.</p>
+        <p class="founder-split__quote">I spent six months trying to work out which campervan was right for me. Everything I found was written to sell me something — conversion company blogs, gear roundups with hidden incentives, forum posts from people guessing. Nobody was asking the right questions.</p>
         <p class="founder-split__body">CamperDNA is what I needed and couldn't find. It's a free profiling tool that figures out what you actually need — based on how you use a van, not what's easy to sell. No agenda. No sign-up. Just honest guidance.</p>
         <a href="/story/" class="btn btn--outline-dark btn--sm">Read the full story &rarr;</a>
         <p class="founder-split__name">— Overlander, founder of CamperDNA</p>
@@ -245,7 +245,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
