--- a/story/index.html
+++ b/story/index.html
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -76,11 +76,11 @@
 <hr />
 <h2>Where we are now</h2>
 <p>This is an early version of what CamperDNA will eventually become. The tool works, the guides are growing, and the profile logic is built on real decisions made by real owners.</p>
-<p>We're a small operation. There's no VC money, no growth targets, no agenda beyond building something genuinely useful. The site pays for itself through affiliate commissions, clearly labelled, on things we'd recommend anyway.</p>
+<p>We're a small operation. There's no VC money, no growth targets — just a genuine interest in building something useful. The site stays free through product recommendations in our kit guides, clearly labelled, on things we'd recommend anyway.</p>
 <p>If you've found it useful, the best thing you can do is share it with someone who's just starting their own research. That's how this grows.</p>
 <hr />
 <p><a href="/your-camperdna">Get Your CamperDNA Profile →</a></p>
-<p><a href="/how-we-make-money">How we make money →</a></p>
+<p><a href="/how-we-make-money">How the site is funded →</a></p>
   </div>
 </div>
 
@@ -133,7 +133,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
