--- a/decision-guide/index.html
+++ b/decision-guide/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Campervan Buying Guide UK — Decision Guide | CamperDNA</title>
-  <meta name="description" content="Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest answers, no sales agenda.">
+  <meta name="description" content="Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest, independent answers.">
   <link rel="canonical" href="https://camper-dna.com/decision-guide/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Campervan Buying Guide UK — Decision Guide | CamperDNA">
-  <meta property="og:description" content="Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest answers, no sales agenda.">
+  <meta property="og:description" content="Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest, independent answers.">
   <meta property="og:url" content="https://camper-dna.com/decision-guide/">
   <meta property="og:image" content="https://camper-dna.com/assets/images/01-vw-exterior/vw-t6-exterior-annie-spratt-01--hero--overlay.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link nav__link--active">Decision Guide</a></li>
@@ -53,7 +53,7 @@
     <nav class="hero__breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span aria-hidden="true">›</span> <span aria-current="page">The Campervan Decision Guide</span></nav>
     <span class="hero__eyebrow">Decision Guide</span>
     <h1 class="hero__title">The Campervan Decision Guide</h1>
-    <p class="hero__sub">Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest answers, no sales agenda.</p>
+    <p class="hero__sub">Everything you need to make the big campervan decisions. Donor van or pre-converted? T5 or T6? What size? How much? Honest, independent answers.</p>
   </div>
 </section>
 
@@ -126,6 +126,7 @@
 </section>
 
 
+
 <section class="section section--grey">
   <div class="container">
     <div class="cta-block">
@@ -174,7 +175,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
