--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -23,7 +23,7 @@
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav__inner">
     <a href="/" class="nav__logo" aria-label="CamperDNA home">
-      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="52" height="52">
+      <img class="nav__logo-img" src="/assets/images/logo.png" alt="CamperDNA logo" width="80" height="80">
     </a>
     <ul class="nav__links" role="list">
       <li><a href="/decision-guide/" class="nav__link ">Decision Guide</a></li>
@@ -71,7 +71,7 @@
 <p>We do our best to keep information on CamperDNA accurate and up to date, but the campervan market moves quickly. Specifications, prices, and availability change. We make no guarantees about the accuracy, completeness, or currency of any information on this site. Always verify key details directly with manufacturers, dealers, or sellers before making any decisions.</p>
 
 <h3>Affiliate Links</h3>
-<p>Some content on CamperDNA contains affiliate links. If you click a link and go on to make a purchase, we may receive a small commission at no extra cost to you. It's one of the ways we offset the time and effort that goes into building and maintaining the site. Affiliate relationships never influence our recommendations. All affiliate content is clearly labelled. See our <a href="/how-we-make-money/">How We Make Money</a> page for full details.</p>
+<p>Some guides on CamperDNA include product recommendations with affiliate links. If you click one and make a purchase, we may receive a small commission at no extra cost to you — it's how we keep the site free. Product picks are always based on honest assessment, not commercial arrangements. All affiliate links are clearly labelled. <a href="/how-we-make-money/">How the site is funded &rarr;</a></p>
 
 <h3>External Links</h3>
 <p>CamperDNA may link to external websites for reference or further reading. We don't control those sites and aren't responsible for their content or availability. A link doesn't imply endorsement.</p>
@@ -135,7 +135,7 @@
           <a href="/kit-and-gear/van-life-essentials/">Van Life Essentials</a>
           <a href="/your-camperdna/">Get Your Profile</a>
           <a href="/about/">About</a>
-          <a href="/how-we-make-money/">How We Make Money</a>
+          <a href="/how-we-make-money/">How the site is funded</a>
         </nav>
       </div>
     </div>
